bug fixes and alignment issues

--- a/src/Components/SignupPage/SignupPage.css
+++ b/src/Components/SignupPage/SignupPage.css
@@ -37,6 +37,7 @@
 }
 .container {
   width: 100%;
+  margin-top: 1rem;
   display: flex;
   flex-direction: row;
 }
@@ -44,9 +45,8 @@
   width: 50%;
 }
 .section-1 {
-  width: 50vw;
+  width: 50%;
   box-sizing: border-box;
-  overflow-x: scroll;
 }
 .section1_title {
   font-family: Avenir;
@@ -54,34 +54,49 @@
   line-height: 7.2rem;
   padding-right: 10%;
   color: #5861ae;
+  padding-bottom: 1rem;
 }
-
 .section1_para {
-  font: normal normal 20px/26px Avenir;
+  font-family: Avenir;
+  font-size: 2.4rem;
+  line-height: 4.6rem;
+  font-style: normal;
   letter-spacing: 0.8px;
   color: #565657;
+  margin-bottom: 1rem;
 }
-
 .section1_para1 {
-  font: normal normal normal 16px/26px Avenir;
+  font-family: Avenir;
+  font-size: 1.6rem;
+  font-style: normal;
+  line-height: 3.2rem;
   letter-spacing: 0.64px;
   color: #565657;
-  font-size: 13px;
+  margin-bottom: 1rem;
 }
-
 .section1_btn {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   border: 2px solid #4552c1;
   border-radius: 4px;
   background-color: white;
+  padding: 1.6rem 4rem;
+  font-family: Avenir;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 100;
+  line-height: 0.8rem;
+  color: #565657;
 }
-
 .section1_btn:hover,
 .section1_btn:active {
   background-color: #4552c1;
   color: white;
   box-shadow: 2px 2px 10px gray;
   transform: scale(1.01);
+  cursor: pointer;
+}
+.section_btn1:focus {
+  background-color: #081feb;
 }
 
 .section-2 {
